--- a/todos/templates/todos/index.html
+++ b/todos/templates/todos/index.html
@@ -12,7 +12,7 @@
     <div class="offset-md-2 col-lg-9">
       <div class="page-header">
         <h1>
-          DevOps 101 New Updated
+          I am Hero! And I am changed! 
         </h1>
       </div>
     </div>
